--- a/src/styles/main/_c_chat_send.scss
+++ b/src/styles/main/_c_chat_send.scss
@@ -4,6 +4,7 @@
 .chat-send{
   height: $chat-send-height;
   border-top:1px solid $gray-light;
+  background:$light-base;
   position:absolute;
   width:100%;
   bottom:0;
