--- a/src/styles/main/_reset.scss
+++ b/src/styles/main/_reset.scss
@@ -177,7 +177,7 @@ mark {
 
 /* 代码片断 */
 pre, code, pre tt {
-  font-family: Courier, 'Courier New', monospace;
+  font-family: $font-family-special;
 }
 
 //pre {
