--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,14 +30,15 @@
 @import "main/c_bubble";
 @import "main/c_global_panel";
 @import "main/c_sub_panel";
-@import "main/_c_thread_search";
-@import "main/_c_thread_list";
+@import "main/c_thread_search";
+@import "main/c_thread_list";
 @import "main/c_chat_area";
 @import "main/c_emotion";
 @import "main/c_calendar_area";
 @import "main/c_calendar";
 @import "main/c_button_group";
 @import "main/c_approval_area";
+@import "main/c_slider";
 // $animation
 @import "main/animation";
 
