add slider content

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,13 +39,20 @@
 @import "main/c_button_group";
 @import "main/c_approval_area";
 @import "main/c_slider";
+@import "main/c_calendar_createMeeting";
+@import "main/c_calendar_reason";
+@import "main/c_calendar_place";
+@import "main/c_more_detail";
+@import "main/_c_dropdown";  //下拉小方块
+
 // $animation
 @import "main/animation";
 
 // $fullcalendar
 @import "lib/fullcalendar";
 @import "lib/fullcalendar-for-launchr";
-
+// $pikaday
+@import "lib/pikaday";
 // $state
 @import "main/state";
 
