--- a/src/styles/main/_variables.scss
+++ b/src/styles/main/_variables.scss
@@ -6,10 +6,11 @@
 $blue-base: #0099ff !default;
 $red-base: #ff3366 !default;
 $green-base:#24c05f !default;
+$orange-base:#fab56b!default;
 $gray-base: #000 !default;
 $gray-darker: #56646d !default;
 $gray-dark: #bec6d3 !default;
-$gray-light:#e3e7ea !default;
+$gray-light:#bec6d3 !default;
 $gray-lighter: #f5f6f8 !default;
 $light-base: #fff;
 
